--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "License :: OSI Approved :: Apache License 2.0",
     "Intended Audience :: Developers",
 ]
-dependencies = ["msgpack"]
+dependencies = ["msgpack", "rich"]
 
 [tool.setuptools]
 package-dir = { "" = "src" }
